tests/compile-fail/integration__integration__mapfiles__abi_multiple_o.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad signature: signature has multiple 'o' args
  ┌─ <mapfile-1>:3:5
  │
3 │ 300 oot
  │     ^^^ signature has multiple 'o' args


